# 6841-Main-Repo

./: 6841 Project Report.docx  CMakeLists.txt  README.md  microui.c  microui.h  render.c  render.h  server.c
client/: screenshot.c  screenshot.h  system.c  system.h  trojan.c
functions/: keylogger.c  keylogger.h
server/: microui.c  microui.h  render.c  render.h  server.c  server.h
